Sun Mar 30 18:26:10 2003  Joern Thyssen  <jth@gnubg.org>

	Add bgvariation bgv to cubeinfo
	(preparing for hypergammon)

	Change a gazillion routines and their callers, and the callers
	callers, and ...

	* bearoff.c: handle hypergammon databases.
	* eval.c (ClassifyPosition, GameStatus): new parameter bgv.
	* eval.c (SetCubeInfo, SetCubeInfoMatch, SetCubeInfoMoney):
	new parameter bgv.
	* eval.c (EvaluatePositionCubeful4): calculate cubeful equities
	for hypergammon (only money game so far; match play is FIXME)
	* positionid.c (PositionFromBearoff, PositionBearoff): new parameter:
	number of chequers (needed to avoid 32-bit overflow)

	* import.c: add some calls to outputx just before any assertion.

Sun Mar 30 14:30:30 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLDumpStatcontext): fix a few typos.

Sun Mar 30 10:17:50 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (GetValue): new function.
	* import.c (ParseSGGOptions): sscanf is not a good choice here,
	it causes gnubg to misunderstand the two-word SGG options, like
	"Doubling Cube: Yes".
	(reported by Albert Silver)

Sat Mar 29 16:47:16 2003  Joern Thyssen  <jth@gnubg.org>

	New command "set path snowietxt ...".
	(reported by Michael Depreli)

	* gnubg.c: new command "set path snowietxt ..."
	* set.c (CommandSetPathBKG, CommandSetPathSnowieTxt): new routines.
	* show.c (CommandShowPaths): show new path.
	* gtkgame.c (GTKShowPath): show new path.
	* gtkgame.c (ImportSnowieTxt): use new path.

Sat Mar 29 16:23:37 2003  Joern Thyssen  <jth@gnubg.org>

	Try to stop the never-ending discussion regarding cubeless
	equities for Jacoby rule and money games with centered cubes.

	* eval.c (UtilityME): new function to return money equity as
	opposed to cubeless equity.
	(changed a few callers in eval.c and database.c)

Sat Mar 29 16:02:44 2003  Joern Thyssen  <jth@gnubg.org>

        Enhance dice manipulation :-)

        * gnubg.c, show.c, set.c: new commands "set cheat enable" and